@@ -224,6 +224,9 @@ Release 2.8.0 - UNRELEASED
 
     YARN-3197. Confusing log generated by CapacityScheduler (wangda)
 
+    YARN-3894. RM startup should fail for wrong CS xml NodeLabel capacity
+    configuration. (Bibin A Chundatt via wangda)
+
 Release 2.7.2 - UNRELEASED
 
   INCOMPATIBLE CHANGES
